--- a/style.css
+++ b/style.css
@@ -48,3 +48,10 @@ h1{
 h2{
     padding-left: 20px;
 }
+@media screen and (max-width: 768px){
+    #photos{
+        width: 300px;
+        height: 300px;
+    }
+    }
+}
