--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 .navbar-brand{
 font-family: 'Slabo 27px';
-font-weight: 1000px;
+color: white;
+    text-shadow:
+    -1px -1px 0  rgb(246, 245, 244),
+    1px -1px 0  rgb(246, 245, 244),
+    -1px 1px 0  rgb(246, 245, 244),
+    1px 1px 0  rgb(246, 245, 244);  
 }
 .nav-link{
     font-family: 'Slabo 27px';
     color: rgb(2, 2, 51);
     font-size: large;
-    font-weight: 1000;   
+    font-weight: 1000;  
+    
+
 }
 body{
     background-color: rgb(246, 245, 244);
@@ -15,14 +22,7 @@ body{
     font-family: 'Slabo 27px';
     font-size: 30px;
 }
-a{
-    position:relative;
-    float:left;
-}
-.about{
-    padding: 10px;
-    float: left;
-}
+
 h1{
     font-weight: 1000;
     text-align: center;
@@ -31,8 +31,8 @@ h1{
     margin: 0 auto;
 }
 .container1{
-  width: 500px;
-  padding: 20px;
+  width: 500px; 
+  padding: 20px; 
   border: 2px solid rgb(2, 2, 51);
   margin: 0 auto;
   font-family: 'Slabo 27px';
@@ -41,11 +41,11 @@ h1{
   background-color: white;
 }
 #main{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
+  float: center;
+  width: 33.3%;
+  padding: 0px;
 }
+
 h2{
     padding-left: 20px;
 }
