--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.navbar-brand{
+.display-4{
 font-family: 'Slabo 27px';
 color: white;
     text-shadow:
@@ -6,6 +6,7 @@ color: white;
     1px -1px 0  rgb(246, 245, 244),
     -1px 1px 0  rgb(246, 245, 244),
     1px 1px 0  rgb(246, 245, 244);  
+    
 }
 .nav-link{
     font-family: 'Slabo 27px';
@@ -61,9 +62,8 @@ h2{
     width: 300px;
     position: relative;
     margin-top: -50px;
-    
-        
     }
+  
     }
 @media screen and (min-width: 1004px){
 #label{
