--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .display-4{
-font-family: 'Slabo 27px';
+font-family: 'Raleway', sans-serif;
 color: white;
     text-shadow:
     -1px -1px 0  rgb(246, 245, 244),
@@ -9,22 +9,23 @@ color: white;
     
 }
 .nav-link{
-    font-family: 'Slabo 27px';
-    color: rgb(2, 2, 51);
+    font-family: 'Raleway', sans-serif;
+    color:black;
     font-size: large;
     font-weight: 1000;  
     
 
 }
 body{
-    background-color: rgb(246, 245, 244);
+    background-color:  white;
 }
 .container{
-    font-family: 'Slabo 27px';
+    font-family: 'Raleway', sans-serif;
     font-size: 30px;
 }
 
 h1{
+    color: black;
     font-weight: 1000;
     text-align: center;
 }
@@ -34,12 +35,12 @@ h1{
 .container1{
   width: 500px; 
   padding: 20px; 
-  border: 2px solid rgb(2, 2, 51);
+  border: 2px solid rgba(0, 0, 0, 0.726);
   margin: 0 auto;
-  font-family: 'Slabo 27px';
+  font-family: 'Raleway', sans-serif;
   font-size: 30px;
-  color: rgb(2, 2, 51);
-  background-color: white;
+  color: white;
+  background-color:rgba(0, 0, 0, 0.726);
 }
 #main{
   float: center;
@@ -50,13 +51,18 @@ h1{
 h2{
     padding-left: 20px;
 }
+.card{
+    border-color: black;
+    height: 500px;
+    font-size: 20px;
+}
 @media screen and (max-width: 1003px){
     #photos{
         width: 300px;
         height: 300px;
     }
     #label{
-    background-color: rgb(2, 2, 51);
+    background-color:rgba(0, 0, 0, 0.726);
     color: rgb(246, 245, 244);
     text-align: center;
     width: 300px;
@@ -67,7 +73,7 @@ h2{
     }
 @media screen and (min-width: 1004px){
 #label{
-    background-color: rgb(2, 2, 51);
+    background-color: rgba(0, 0, 0, 0.726);
     color: rgb(246, 245, 244);
     text-align: center;
     width: 450px;
