--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ h2{
     border-color: black;
     height: 500px;
     font-size: 20px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 1003px){
     #photos{
