--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ h1{
     font-weight: 1000;
     text-align: center;
 }
-.text{
-    margin: 0 auto;
+.textinfo{
+    position: relative;
+    float: right;
+    color: green;
 }
 .container1{
   width: 500px; 
@@ -55,8 +57,9 @@ h2{
     border-color: black;
     height: 500px;
     font-size: 20px;
-    padding: 10px;
+    padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 20px;
 }
 @media screen and (max-width: 1003px){
     #photos{
