updated portfolio page and links

--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,15 @@
+body{
+  font-family: 'Roboto', sans-serif;
+}
 .jumbotron{
   text-align: center;  
+  color: white;
+  line-height: 70%;
+  text-shadow:
+  -.25px -.25px 0  gray,
+  .25px -.25px 0  gray,
+  -.25px .25px 0  gray,
+  .25px .25px 0  gray; 
 }
 .name{
   font-size: 75px;
@@ -39,8 +49,49 @@
   margin-top: 35px;
   opacity: 0.75;
 }
-#hidden{
-  display: none;
+#photo4{
+  margin-right: 100px;
+  margin-bottom: 25px;
+  opacity: 0.75;
+
+}
+#card4{
+  padding: 25px;
+  text-align: center;
+  position: relative;
+  margin-left: 50px;
+  margin-right: -50px;
+  margin-top: 75px;
+  z-index: 10;
+}
+#photo5{
+  margin-bottom: 25px;
+  opacity: 0.75;
+}
+#card5{
+  padding: 25px;
+  text-align: center;
+  position: relative;
+  margin-left: 50px;
+  margin-right: -50px;
+  margin-top: -10px;
+  z-index: 10;
+}
+#card6{
+  padding: 25px;
+  text-align: center;
+  position: relative;
+  margin-left: 50px;
+  margin-right: -50px;
+  margin-top: 50px;
+  z-index: 10;
+}
+footer{
+  margin-top: 25px;
+  border-color: black;
+  text-align: center;
+  opacity: .8;
+  line-height: 70%;
 }
 @media screen and (max-width: 1200px){
   #photo2{
@@ -83,7 +134,7 @@
     opacity: 0.75;
     height: 346px;
   }
-
+ 
   }
   @media screen and (max-width: 991px){
     #card1{
@@ -94,6 +145,21 @@
       padding: 25px;
       text-align: center;
       float: right
+    }
+    #card4{
+      padding: 0;
+      margin: 0;
+    }
+    #card5{
+      padding: 0;
+      margin: 0;
+    }
+    #card6{
+      padding: 0;
+      margin: 0;
+    }
+    #photo4{
+      margin: 0 auto;
     }
    
   }
